# apscheduler-dishka

./: .gitignore  .mypy.ini  .pytest.toml  README.md  noxfile.py  pyproject.toml
.github/workflows/: setup.yml
examples/: main_async_inject.py  main_auto_inject.py  main_inject.py  main_inject_redis_jobstore.py
requirements/: gevent-latest.txt  qt-latest.txt  redis-latest.txt  test.txt  tornado-latest.txt  twisted-latest.txt
src/apscheduler_dishka/: __init__.py  container.py  errors.py  executor.py  integration.py
src/apscheduler_dishka/executors/: inject.py
src/apscheduler_dishka/executors/_integrations/: tornado_.py
tests/: common.py  conftest.py  test_apscheduler_async.py  test_apscheduler_sync.py  test_apsheduler_redis_jobstore.py  test_create_executor.py  test_executor.py  test_inject.py  test_scheduler.py
tests/scheduler/: base.py
tests/scheduler/core/async/: test_scheduler.py
tests/scheduler/core/background/: conftest.py  test_scheduiler_background.py
tests/scheduler/core/blocking/: conftest.py  test_scheduler_blocking.py
tests/scheduler/integrations/gevent/: conftest.py  test_scheduler_gevent.py
tests/scheduler/integrations/qt/: conftest.py  test_scheduler_qt.py
tests/scheduler/integrations/redis_jobstore/: conftest.py  test_scheduler_redis_jobstore.py
tests/scheduler/integrations/tornado/: common.py  conftest.py  test_scheduler_tornado.py
tests/scheduler/integrations/twisted/: conftest.py  test_scheduler_twisted.py
tests/unit/: test_executor.py
