[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "apscheduler-dishka"
version = "1.0.0"
readme = "README.md"
authors = [
    { name = "MikhailWar"},
]
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Apscheduler integration for dishka"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]

dependencies = [
    "apscheduler>=3.11.2",
    "dishka>=1.8.0, <2.0.0",
]


[dependency-groups]
typos = ["typos == 1.42.1"]
zizmor = ["zizmor == 1.22.0"]
ci = [
    "ruff == 0.14.14",
    "mypy == 1.19.1",
    "nox == 2025.11.12",
]
tests = [
    "pytest == 9.0.2",
    "pytest-cov == 7.0.0",
    "pytest-asyncio == 1.3.0",
    "httpx == 0.27.0",
    "asgi-lifespan == 2.1.0",
]
dev = [
    "uv == 0.9.26",
    { include-group = "ci" },
    { include-group = "typos" },
    { include-group = "zizmor" },
    { include-group = "tests" },
]

[project.urls]
Source = "https://github.com/MikhailWar/apscheduler-dishka"
Homepage = "https://github.com/MikhailWar/apscheduler-dishka"
Download = "https://github.com/MikhailWar/apscheduler-dishka/#files"
"Bug Tracker" = "https://github.com/MikhailWar/apscheduler-dishka"
